--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     def room_version = "2.4.3"
     def nav_version = "2.5.1"
     def hilt_version = "2.37"
+    def lottieVersion = "3.3.1"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
@@ -52,6 +53,9 @@ dependencies {
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    //lottie
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     //room
     annotationProcessor "androidx.room:room-compiler:$room_version"
